--- a/ultralytics/cfg/models/13-RGBT/yolo13-l-RGBT-midfusion.yaml
+++ b/ultralytics/cfg/models/13-RGBT/yolo13-l-RGBT-midfusion.yaml
@@ -1,9 +1,9 @@
 nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolov13n.yaml' will call yolov13.yaml with scale 'n'
   # [depth, width, max_channels]
-  n: [0.50, 0.25, 1024]   # Nano
-  s: [0.50, 0.50, 1024]   # Small
-#  l: [1.00, 1.00, 512]    # Large
+#  n: [0.50, 0.25, 1024]   # Nano
+#  s: [0.50, 0.50, 1024]   # Small
+  l: [1.00, 1.00, 512]    # Large
 #  x: [1.00, 1.50, 512]    # Extra Large
 
 ch: 4
@@ -36,36 +36,41 @@ backbone:
   - [[8, 18], 1, Concat, [1]]  # cat backbone P4   22
   - [[10, 20], 1, Concat, [1]]  # cat backbone P5   23
 
+  - [21, 1, Conv, [1024, 3]] # 24
+  - [22, 1, Conv, [1024, 3]] # 25
+  - [23, 1, Conv, [1024, 3]] # 26
+
 head:
 #  - [[6, 8, 10,16,18, 20], 2, HyperACE, [1024, 8, True, True, 0.5, 1, "both"]] # P4/16   24
-  - [[21,22,23], 2, HyperACE, [1024, 8, True, True, 0.5, 1, "both"]] # P4/16   24
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # P5/32 25
-  - [ 24, 1, DownsampleConv, []] # P3/8 26
-  - [[22, 24], 1, FullPAD_Tunnel, []]  #   27
-  - [[21, 25], 1, FullPAD_Tunnel, []]  #   28
-  - [[23, 26], 1, FullPAD_Tunnel, []] #    29
+  - [[24,25,26], 2, HyperACE, [1024, 8, True, True, 0.5, 1, "both"]] # P4/16   27
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # P5/32 28
+  - [ 27, 1, DownsampleConv, []] # P3/8 29
+  - [[25, 27], 1, FullPAD_Tunnel, []]  #   30
+  - [[24, 28], 1, FullPAD_Tunnel, []]  #   31
+  - [[26, 29], 1, FullPAD_Tunnel, []] #    32
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 27], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, DSC3k2, [1024, True]] #    32
-  - [[-1, 24], 1, FullPAD_Tunnel, []]  #  33
+  - [[-1, 30], 1, Concat, [1]] # cat backbone P4
+  - [-1, 2, DSC3k2, [1024, True]] #    35
+  - [[-1, 27], 1, FullPAD_Tunnel, []]  #  36
 
-  - [32, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 28], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, DSC3k2, [256, True]] #   36
-  - [25, 1, Conv, [256, 1, 1]]
-  - [[36, 37], 1, FullPAD_Tunnel, []]  #  38
+  - [35, 1, nn.Upsample, [None, 2, "nearest"]]
+  - [[-1, 31], 1, Concat, [1]] # cat backbone P3
+  - [-1, 2, DSC3k2, [256, True]] #   39
+  - [28, 1, Conv, [256, 1, 1]]
+  - [[39, 40], 1, FullPAD_Tunnel, []]  #  41
 
-  - [-1, 1, Conv, [256, 3, 2]]  # 39
-  - [[-1, 33], 1, Concat, [1]] # cat head P4  40
-  - [-1, 2, DSC3k2, [1024, True]] #   41
-  - [[-1, 24], 1, FullPAD_Tunnel, []]  # 42
+  - [-1, 1, Conv, [256, 3, 2]]  # 42
+  - [[-1, 36], 1, Concat, [1]] # cat head P4  43
+  - [-1, 2, DSC3k2, [1024, True]] #   44
+  - [[-1, 27], 1, FullPAD_Tunnel, []]  # 45
 #
-  - [41, 1, Conv, [512, 3, 2]]
-  - [[-1, 29], 1, Concat, [1]] # cat head P5  43
-  - [-1, 2, DSC3k2, [1024,True]] # 44 (P5/32-large)
-  - [26, 1, Conv, [1024, 3]]
-  - [[-1, -2], 1, FullPAD_Tunnel, []]  # 46
+  - [44, 1, Conv, [512, 3, 2]]
+  - [[-1, 32], 1, Concat, [1]] # cat head P5  43
+  - [-1, 2, DSC3k2, [1024,True]] # 47 (P5/32-large)
+  - [29, 1, Conv, [1024, 3]]
+  - [[-1, -2], 1, FullPAD_Tunnel, []]  # 49
 
-  - [[38, 42, 46], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[41, 45, 49], 1, Detect, [nc]] # Detect(P3, P4, P5)
+#  - [[12], 1, Detect, [nc]] # Detect(P3, P4, P5)
 
